# pytest-testmon

./: .dockerignore  .gitignore  .travis.yml  DRCODEOWNERS  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  analyze.py  appveyor.yml  autotest.py  create_stable.py  eclipse_pytest.py  extract_db_data.py  index.html  params.json  pylintrc  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  t.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: deploy.yml
.harness/: pr_input_set.yaml  publish.yaml  tag_input.yaml  test.yaml
exampleproject/: b.py  c.py  d.py  iohog.py  miner.py  mininum_to_rootdir.py  pytest.ini  run_tests.sh
exampleproject/tests/: benchmarking.txt  print1250r.py  test_a.py  test_ab.py  test_b.py  test_intensive.py  test_non_utf_crash.py  test_unittest.py
exampleproject/tests/single/: test_s.py  test_t.py
exampleproject/tests_2/: test_e.py
exampleprojects/calc/: addsub.py
exampleprojects/calc/test/: test_addsub.py
exampleprojects/gutter/: a_file.py  out.py  test_file_gutter.py
exampleprojects/gutter/project/test/: test_file_gutter.py
exampleprojects/performance/: test_noop.py
ez-viz/: app.py  package-lock.json  package.json
ez-viz/.ezmon-fp/: tests.json
ez-viz/.ezmon-fp/test_calculator.py_test_divide/20251021-000956-15c10e13/: fingerprint.json
ez-viz/.ezmon-fp/test_calculator.py_test_divide/20251021-001242-15c10e13/: checksum02.txt
ez-viz/.ezmon-fp/test_calculator.py_test_divide/latest/: fingerprint.json
ez-viz/.ezmon-fp/test_calculator.py_test_divide_by_zero/: history.json
ez-viz/.ezmon-fp/test_calculator.py_test_divide_by_zero/20251021-000956-15c10e13/: checksum01.txt  checksum02.txt  fingerprint.json
ez-viz/.ezmon-fp/test_calculator.py_test_divide_by_zero/20251021-001242-15c10e13/: fingerprint.json
ez-viz/.ezmon-fp/test_calculator.py_test_divide_by_zero/latest/: checksum01.txt
ez-viz/.ezmon-fp/test_two.py_test_should_not_run/: history.json
ez-viz/.ezmon-fp/test_two.py_test_should_not_run/20251021-000009-15c10e13/: checksum01.txt  fingerprint.json
ez-viz/.ezmon-fp/test_two.py_test_should_not_run/20251021-000620-15c10e13/: checksum01.txt  fingerprint.json
ez-viz/.ezmon-fp/test_two.py_test_should_run/: checksum01.txt  checksum02.txt
ez-viz/.ezmon-fp/test_two.py_test_should_run/20251021-000009-15c10e13/: fingerprint.json
ez-viz/.ezmon-fp/test_two.py_test_should_run/latest/: checksum02.txt  fingerprint.json
ez-viz/client/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
ez-viz/client/src/: App.jsx
ez-viz/client/src/components/: EnvItem.jsx  FileDetails.jsx  FileItem.jsx  FilesTab.jsx  Header.jsx  MainContent.jsx  Modal.jsx  SearchBox.jsx  SelectorBar.jsx  StatCard.jsx  SummaryTab.jsx  Tabs.jsx  TestDetails.jsx  TestItem.jsx  TestManagementTab.jsx  TestsTab.jsx  utils.jsx
ez-viz/templates/: fingerprints.html  index.html
ezmon/: __init__.py  common.py  configure.py  db.py  process_code.py  pytest_ezmon.py  testmon_core.py  tox_testmon.py
io.intellij/: build.gradle
io.intellij/src/main/kotlin/sk/infinit/testmon/: Icons.kt  RuntimeInfoProjectComponent.kt  Util.kt
io.intellij/src/main/kotlin/sk/infinit/testmon/database/: DatabaseService.kt  PyException.kt
io.intellij/src/main/kotlin/sk/infinit/testmon/extensions/: GutterIconRelatedItemLineMarkerProvider.kt  RedUnderlineDecorationExternalAnnotator.kt  SuffixEditorLinePainter.kt
io.intellij/src/test/kotlin/sk.infinit.testmon/: GutterIconTest.kt  RedUnderlineDecorationExternalAnnotatorTest.kt  config.kt
io.intellij/src/test/kotlin/sk.infinit.testmon/testData/: test_a_file.py  test_a_file_suffix.txt  test_file_gutter.py  test_file_underline.py
io.pyri/: Pipfile  setup.py
io.pyri/exampleprojects/gutter/project/: a_file.py
io.pyri/exampleprojects/gutter/project/test/: test_dup_gutter.py  test_file_gutter.py
io.pyri/exampleprojects/multiline/: test_m.py
io.pyri/exampleprojects/simplest/: test_a.py
io.pyri/runtime_info0/: pytest_runtime_info.py
io.pyri/test/: test_runtime_info.py
jarvis-autotest/: test3_junit_pr.sh
pycharm/: build.gradle
pycharm/src/main/java/sk/infinit/testmon/: RuntimeInfoProjectComponent.kt  RuntimeInfoToolWindowFactory.kt  TestmonAnnotator.kt  TestmonEditorLinePainter.kt  TestmonLineMarkerProvider.kt  TestmonProjectComponent.kt  TestmonRelatedItemLineMarkerProvider.kt  Util.kt
pycharm/src/main/java/test/: GutterIconTest.kt  RedUnderlineDecorationExternalAnnotatorTest.kt  SimpleTest.kt
pycharm/src/main/kotlin/sk/infinit/testmon/: Util.kt
pycharm/src/sk/infinit/testmon/: MessageHttpService.kt  TestmonAnnotator.kt  Util.kt
pycharm/src/sk/infinit/testmon/database/: DatabaseService.kt  PyFileMark.kt
pycharm/src/sk/infinit/testmon/server/: HttpServerComponent.kt  TestmonPortServerManager.kt
pycharm/src/test/kotlin/sk.infinit.testmon/: GutterIconTest.kt  RedUnderlineDecorationExternalAnnotatorTest.kt
runtime_info/: pytest_runtime_info.py
runtime_info0/: pytest_runtime_info.py
test/: __init__.py  astfixture.py  astfixture2.py  print1250r.py  test_configure.py  test_core.py  test_cov_assumptions.py  test_coverage.py  test_data.py  test_human_coverage.py  test_meganoop.py  test_models.py  test_process_code.py  test_pytest_assumptions.py  test_runtime_info.py  test_subprocess.py  test_testmon.py
test/coveragepy/: __init__.py  backunittest.py  coveragetest.py  helpers.py  mixins.py
test/samples/: 2lines.py  print1250r.py
testapp/: a.py  b.py  c.py
testapp/tests/: test_a.py  test_ab.py  test_b.py
testmon/: __init__.py  common.py  configure.py  db.py  import_mtimes.py  plugin.py  process_code.py  pytest_testmon.py  setup.py  testmon_core.py  testmon_core.pyi  testmon_models.py  tmon.py  tox_testmon.py
testmon-plugin/src/sk/infinit/testmon/: Message.kt
testmon_dev/: process_code.py  pytest_testmon.py  testmon_core.py  tox_testmon.py
tests/: test_process_code.py  test_xdist_integration.py
(+30 files in other folders)
