[metadata]
name = pytest-testmon
version = 1.3.0rc3
license = AGPL
author_email = tibor.arpas@infinit.sk
author = Tibor Arpas, Tomas Matlovic, Daniel Hahler, Martin Racak
description = selects tests affected by changed files and methods
long_description = file: README.rst
url = https://testmon.org
platforms =
    linux
    osx
    win32
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: POSIX
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Topic :: Software Development :: Testing
        Topic :: Software Development :: Libraries
        Topic :: Utilities
        Programming Language :: Python
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3 :: Only
        Framework :: Pytest

[options]
python_requires = >=3.6
install_requires =
    pytest>=5,<8
    coverage>=5,<7
packages =
    testmon

[options.entry_points]
pytest11 =
    testmon = testmon.pytest_testmon
tox =
    testmon = testmon.tox_testmon

