[metadata]
name = pytest-testmon
version = 1.4.3b1
license = AGPL
author_email = tibor.arpas@infinit.sk
author = Tibor Arpas, Tomas Matlovic
description = selects tests affected by changed files and methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://testmon.org
project_urls =
    Source=https://github.com/tarpas/pytest-testmon
platforms =
    linux
    osx
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: POSIX
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Topic :: Software Development :: Testing
        Topic :: Software Development :: Libraries
        Topic :: Utilities
        Programming Language :: Python
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3 :: Only
        Framework :: Pytest

[options]
python_requires = >=3.7, <3.12
install_requires =
    pytest>=5,<8
    coverage>=6,<8

packages =
    testmon

[options.entry_points]
pytest11 =
    testmon = testmon.pytest_testmon

